Fix bug with z-index

--- a/MultiPageNavigation/multiPageNavigation.css
+++ b/MultiPageNavigation/multiPageNavigation.css
@@ -5,7 +5,7 @@ div.extendedNav {
   position: absolute;
   top: 0;
   transition: opacity 0.5s;
-  z-index: 100;
+  z-index: 1;
 }
 div.extendedNav:hover{
   opacity: 1;
